<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LP - LastPrice</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="sesso">Sesso</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="Luogo_di_nascita">Luogo</string>
    <string name="residenza">Indirizzo</string>
    <string name="CAP">CAP</string>
    <string name="citta">Città</string>
    <string name="telefono">Telefono</string>
    <string name="cellulare">Cellulare</string>
    <string name="carta">Tipo carta</string>
    <string name="numero_carta">Numero Carta</string>
    <string name="conferma">Conferma Password</string>
    <string name="intro">Benvenuti su LastPrice </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LP - LastPrice</string>
    <string name="offerte">Offerte</string>
    <string name="title_activity_registrazione">Registrazione</string>
    <string name="title_activity_offerta">Offerta</string>
    <string name="registrati">Registrati</string>
    <string name="confermar">Conferma</string>
    <string name="benvenuto">Benvenuto su Last Price</string>
    <string name="title_activity_welcome">Benvenuto su LastPrice</string>
    <string name="title_activity_seller">Benvenuto su LastPrice</string>
    <string name="title_activity_new_offer">Inserisci una nuova offerta</string>
    <string name="title_activity_add_offer">Inserici una nuova offerta</string>
    <string name="cliente">Cliente</string>
    <string name="venditore">Venditore</string>
    <string name="admin">Amministratore</string>
    <string name="title_activity_admin">Benvenuto su LastPrice</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="avanti">Avanti</string>
    <string name="title_activity_registrazione2">Registrazione</string>
    <string name="tipo_account">Tipologia Account</string>
    <string name="p.iva">Partita Iva</string>
    <string name="numerocarta">Numero Carta</string>
    <string name="title_activity_categoria">CategoriaActivity</string>
    <string name="title_activity_pagamenti">PagamentiActivity</string>
    <string name="rimborsi">Gestione Rimborsi</string>
    <string name="utenti">Gestione Utenti</string>
    <string name="transazioni">Visualizza Transazioni</string>
    <string name="title_activity_active_users">Utenti Attivi</string>
    <string name="title_activity_refunds">Rimborsi</string>
    <string name="title_activity_transaction">Vendite</string>
    <string name="title_activity_last_price">LastPrice</string>
    <string name="acquista">Acquista</string>
    <string name="vis_mappa">Visualizza sulla mappa</string>
    <string name="prezzo">Prezzo</string>
    <string name="title_activity_dettagli">Dettagli Offerta</string>
    <string name="title_activity_ripeilogo">Riepilogo Dati</string>
    <string name="title_activity_active_offers">Le tue offerte</string>
    <string name="title_activity_vacanze_fragment">Vacanze</string>
    <string name="title_activity_benessere_fragment">Benessere</string>
    <string name="title_activity_sport">Sport</string>
    <string name="title_activity_holiday_fragment">Holiday</string>
    <string name="title_activity_wellness_fragment">Wellness</string>
    <string name="title_activity_sports_fragment">Sports</string>
    <string name="title_activity_cat">Catalogo Offerte</string>
    <string name="title_activity_svago">SvagoActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_tecnologia">TecnologiaActivity</string>
    <string name="estrai">Estrai il premio</string>
    <string name="title_activity_rimborso">Rimborso</string>
    <string name="title_activity_dettagli_transaction">DettagliTransaction</string>
    
</resources>
