<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="426dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView1"
	    android:layout_alignRight="@+id/textView1"
	    android:layout_below="@+id/editText1"
	    android:layout_marginTop="36dp"
	    android:text="@string/password" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginRight="29dp"
	    android:layout_marginTop="18dp"
	    android:layout_toLeftOf="@+id/button1"
	    android:text="@string/user" />

	<Button
	    android:id="@+id/button2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="27dp"
	    android:onClick="registrati"
	    android:text="@string/registrati" />

	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView3"
	    android:layout_below="@+id/textView1"
	    android:layout_marginTop="31dp"
	    android:ems="10" />

	<EditText
	    android:id="@+id/editText2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/editText1"
	    android:layout_below="@+id/textView3"
	    android:layout_marginTop="31dp"
	    android:ems="10"
	    android:inputType="textPassword" >

	    <requestFocus />
	</EditText>

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginLeft="68dp"
	    android:layout_toRightOf="@+id/button2"
	    android:onClick="accesso"
	    android:text="@string/login" />

	<Button
	    android:id="@+id/button3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/button2"
	    android:layout_below="@+id/editText2"
	    android:layout_marginTop="33dp"
	    android:text="Login venditore" 
	    android:onClick="gestioneOfferte"/>

</RelativeLayout>
</ScrollView>