<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/utenti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rimborsi"
        android:layout_alignRight="@+id/rimborsi"
        android:layout_below="@+id/rimborsi"
        android:layout_marginTop="67dp"
        android:text="@string/utenti"
        android:onClick="deleteUser" />

    <Button
        android:id="@+id/transazioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/utenti"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/transazioni"
        android:onClick="getTransaction" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transazioni"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:text="Logout"
        android:onClick="logout" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="Benvenuto Amministratore" />

    <Button
        android:id="@+id/rimborsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:onClick="refunds"
        android:text="@string/rimborsi" />

</RelativeLayout>

</ScrollView>